// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useRetrieve should dispatch singles 1`] = `
{
  "meta": {
    "args": [
      {
        "content": "whatever",
        "id": 5,
        "tags": [
          "a",
          "best",
          "react",
        ],
        "title": "hi ho",
      },
      undefined,
    ],
    "key": "GET http://test.com/article-cooler/5",
    "options": {
      "errorPolicy": [Function],
      "fetchInit": {},
      "getFetchInit": [Function],
      "method": "GET",
      "signal": undefined,
      "url": [Function],
      "useFetchInit": [Function],
    },
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch with fetch shape defined dataExpiryLength 1`] = `
{
  "meta": {
    "args": [
      {
        "content": "whatever",
        "id": 5,
        "tags": [
          "a",
          "best",
          "react",
        ],
        "title": "hi ho",
      },
      undefined,
    ],
    "key": "GET http://test.com/article-static/5",
    "options": {
      "dataExpiryLength": 3600000,
      "errorPolicy": [Function],
      "fetchInit": {},
      "getFetchInit": [Function],
      "method": "GET",
      "signal": undefined,
      "url": [Function],
      "useFetchInit": [Function],
    },
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch with fetch shape defined errorExpiryLength 1`] = `
{
  "meta": {
    "args": [
      {
        "content": "whatever",
        "id": 5,
        "tags": [
          "a",
          "best",
          "react",
        ],
        "title": "hi ho",
      },
      undefined,
    ],
    "key": "GET http://test.com/article-static/5",
    "options": {
      "errorExpiryLength": Infinity,
      "errorPolicy": [Function],
      "fetchInit": {},
      "getFetchInit": [Function],
      "method": "GET",
      "signal": undefined,
      "url": [Function],
      "useFetchInit": [Function],
    },
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch with resource defined dataExpiryLength 1`] = `
{
  "meta": {
    "args": [
      {
        "content": "whatever",
        "id": 5,
        "tags": [
          "a",
          "best",
          "react",
        ],
        "title": "hi ho",
      },
      undefined,
    ],
    "key": "GET http://test.com/article-static/5",
    "options": {
      "errorPolicy": [Function],
      "fetchInit": {},
      "getFetchInit": [Function],
      "method": "GET",
      "signal": undefined,
      "url": [Function],
      "useFetchInit": [Function],
    },
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;
